--- a/src/config/dynamic-theme-fixes.config
+++ b/src/config/dynamic-theme-fixes.config
@@ -10097,6 +10097,9 @@ INVERT
 
 samsung.*
 
+INVERT
+.icon
+
 CSS
 .feature-full-bleed-text img {
     filter: brightness(50%) sepia(40%) !important;
